# SageAttention

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  BUILD_SYSTEM_REFACTOR_PROPOSAL.md  CI_CD.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_BUILD.md  Makefile  README.md  SAGE3_BUILD_SPEC.md  build-matrix.yaml  build.py  cibuildwheel.toml  docker-bake.hcl  dockerfile.builder  dockerfile.builder.linux  publish_wheels.sh  pyproject.toml  setup.py  update_pyproject.py
.github/: pypirc
.github/workflows/: build-sageattn.yml  build-sageattn3.yml  build-wheels-linux.yml  build-wheels-windows.yml  build.yml  ci.yml  unified-build.yml
bench/: bench_qk_int8_pv_fp16_cuda.py  bench_qk_int8_pv_fp8_cuda.py  bench_qk_int8_pv_fp8_cuda_sm90.py
csrc/: cp_async.cuh  dispatch_utils.h  mma.cuh  numeric_conversion.cuh  reduction_utils.cuh  utils.cuh
csrc/fused/: fused.cu  fused.h  pybind.cpp
csrc/qattn/: attn_cuda_sm80.h  attn_cuda_sm89.h  attn_cuda_sm90.h  attn_gfx12_native.h  attn_utils.cuh  pybind_gfx12_native.cpp  pybind_sm80.cpp  pybind_sm89.cpp  pybind_sm90.cpp  qk_int_sv_f16_cuda_sm80.cu  qk_int_sv_f8_cuda_sm89.cuh  qk_int_sv_f8_cuda_sm90.cu  qk_int_sv_gfx12_native.cu  qk_int_sv_gfx12_native_attn_f16.cu  qk_int_sv_gfx12_native_attn_fp8.cu  qk_int_sv_gfx12_native_aux.cu  qk_int_sv_gfx12_native_prepare.cu  (+8 more)
sageattention/: __init__.py  core.py  gfx12_native_compile.py  quant.py  sm80_compile.py  sm89_compile.py  sm90_compile.py
sageattention3_blackwell/: setup.py  update_pyproject.py
tests/: test_flashattn2.py  test_flashattn3.py  test_sageattn.py
(+7 files in other folders)
